# GR551x_SDK

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.gr5xxx
cmake/: armcc-toolchain.cmake  extensions.cmake  gcc-toolchain.cmake  gr5xxx-option.cmake  gr5xxx-postbuild.cmake  kconfig.cmake  kernel.cmake  python.cmake  sdk_default.cmake  version.cmake
components/: CMakeLists.txt  Kconfig
components/drivers_ext/: Kconfig
components/libraries/: CMakeLists.txt  Kconfig
components/libraries/CMSIS/: CMakeLists.txt
components/libraries/app_alarm/: CMakeLists.txt
components/libraries/app_assert/: CMakeLists.txt
components/libraries/app_crypto/: CMakeLists.txt
components/libraries/app_error/: CMakeLists.txt
components/libraries/app_key/: CMakeLists.txt
components/libraries/app_linked_list/: CMakeLists.txt
components/libraries/app_log/: CMakeLists.txt
components/libraries/app_memory/: CMakeLists.txt
components/libraries/app_queue/: CMakeLists.txt
components/libraries/app_scheduler/: CMakeLists.txt
components/libraries/app_timer/: CMakeLists.txt
components/libraries/at_cmd/: CMakeLists.txt
components/libraries/crypto_lib/: CMakeLists.txt
components/libraries/dfu_master/: CMakeLists.txt
components/libraries/dfu_port/: CMakeLists.txt
components/libraries/fault_trace/: CMakeLists.txt
components/libraries/fcc/: CMakeLists.txt
components/libraries/hal_flash/: CMakeLists.txt
components/libraries/hci_uart/: CMakeLists.txt
components/libraries/pmu_calibration/: CMakeLists.txt
components/libraries/ring_buffer/: CMakeLists.txt
components/libraries/sensorsim/: CMakeLists.txt
components/libraries/user_efuse/: CMakeLists.txt
components/libraries/utility/: CMakeLists.txt
components/libraries/vhci/: CMakeLists.txt
components/libraries/virt_key/: CMakeLists.txt
components/profiles/: CMakeLists.txt  Kconfig
drivers/: CMakeLists.txt  Kconfig
include/: custom_config.h
projects/ble/ble_peripheral/ble_app_hrs/: CMakeLists.txt  prj.conf
projects/ble/ble_peripheral/ble_app_hrs/GCC/: CMakeLists.txt
projects/ble/ble_peripheral/ble_app_template_dfu/: CMakeLists.txt  prj.conf
projects/ble/ble_peripheral/ble_app_template_freertos/: CMakeLists.txt  prj.conf
scripts/: kconfig.py
share/sdk-package/cmake/: SdkConfig.cmake  SdkConfigVersion.cmake  sdk_export.cmake  sdk_package_search.cmake
