# sdk_library_named(drivers)
application_sources_ifdef(CONFIG_ADC           src/app_adc.c)
application_sources_ifdef(CONFIG_ADC_DMA       src/app_adc_dma.c)
application_sources_ifdef(CONFIG_AON_WDT       src/app_aon_wdt.c)
application_sources_ifdef(CONFIG_BOD           src/app_bod.c)
application_sources_ifdef(CONFIG_COMP          src/app_comp.c)
application_sources_ifdef(CONFIG_DMA           src/app_dma.c)
application_sources_ifdef(CONFIG_DUAL_TIM      src/app_dual_tim.c)
application_sources_ifdef(CONFIG_GRAPHICS_QSPI src/app_graphics_qspi.c)
application_sources_ifdef(CONFIG_I2C_DMA       src/app_i2c_dma.c)
application_sources_ifdef(CONFIG_I2C           src/app_i2c.c)
application_sources_ifdef(CONFIG_I2S_DMA       src/app_i2s_dma.c)
application_sources_ifdef(CONFIG_I2S           src/app_i2s.c)
application_sources_ifdef(CONFIG_GPIO          src/app_io.c)
application_sources_ifdef(CONFIG_GPIO          src/app_gpiote.c)
application_sources_ifdef(CONFIG_ISO7816       src/app_iso7816.c)
application_sources_ifdef(CONFIG_PWM           src/app_pwm.c)
application_sources_ifdef(CONFIG_PWM_DMA       src/app_pwm_dma.c)
application_sources_ifdef(CONFIG_PWR_MGMT      src/app_pwr_mgmt.c)
application_sources_ifdef(CONFIG_QSPI          src/app_qspi.c)
application_sources_ifdef(CONFIG_QSPI_DMA      src/app_qspi_dma.c)
application_sources_ifdef(CONFIG_RNG           src/app_rng.c)
application_sources_ifdef(CONFIG_RTC           src/app_rtc.c)
application_sources_ifdef(CONFIG_RTOS_CFG      src/app_rtos_cfg.c)
application_sources_ifdef(CONFIG_SOFT_ENCODER  src/app_soft_encoder.c)
application_sources_ifdef(CONFIG_SPI_DMA       src/app_spi_dma.c)
application_sources_ifdef(CONFIG_SPI           src/app_spi.c)
application_sources_ifdef(CONFIG_TIM           src/app_tim.c)
application_sources_ifdef(CONFIG_UART_DMA      src/app_uart_dma.c)
application_sources_ifdef(CONFIG_UART          src/app_uart.c)

# sdk_include_directories(
#     ${CMAKE_CURRENT_SOURCE_DIR}/inc
#     ${CMAKE_CURRENT_SOURCE_DIR}/inc/hal
#     )

# sdk_library_link_libraries(${ble_sdk})

# target_link_libraries(sdk PUBLIC ${SDK_CURRENT_LIBRARY})
