# sdk_library()
# sdk_include_directories(
#     ${CMAKE_CURRENT_SOURCE_DIR}/
# )
application_sources(
    ${CMAKE_CURRENT_SOURCE_DIR}/pmu_calibration.c
)
# sdk_library_link_libraries(
#     # drivers
#     components__libraries__app_timer
# )
# target_link_libraries(sdk PUBLIC ${SDK_CURRENT_LIBRARY})
